<resources>
    <string name="app_name">Megan Leitem - C196 PA</string>
    <string name="term_list">Term List</string>
    <string name="course_list">Course List</string>
    <string name="add_button">Add Button</string>
    <string name="course_list1">Course List</string>
    <string name="course_title">Course Title:</string>
    <string name="course_status">Course Status:</string>
    <string name="save">Save</string>
    <string name="calculus">Calculus</string>
    <string name="active">Active</string>
    <string name="final_assessment">Final Assessment</string>
    <string name="assessment_title">Assessment Title:</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="_07_01_2022">07/01/2022</string>
    <string name="_06_01_2022">06/01/2022</string>
    <string name="instructor_name">Instructor Name:</string>
    <string name="dr_jane_smith">Dr. Jane Smith</string>
    <string name="drsmith_gmail_com">drsmith@gmail.com</string>
    <string name="instructor_email">Instructor Email:</string>
    <string name="_555_555_5555">555-555-5555</string>
    <string name="instructor_phone">Instructor Phone:</string>
    <string name="term_title">Term Title:</string>
    <string name="assessment_type">Assessment Type:</string>
    <string name="midterm">Midterm</string>
    <string name="semester_midterm">Semester Midterm</string>
    <string name="_06_08_2022">06/08/2022</string>
    <string name="assessment_id">Assessment ID:</string>
    <string name="term_id">Term ID</string>
    <string name="term">Term:</string>
    <string name="_0">0</string>
    <string name="id">ID</string>
    <string name="course_id">Course ID:</string>
    <string name="_1">1</string>
    <string name="course_notes">Course Notes</string>
    <string name="textview">TextView</string>
    <string name="notify">Notify</string>
    <string name="channel_name">mychannel</string>
    <string name="channel_description">mychanneldescription</string>
    <string name="notify_on_start_date">Notify on Start Date</string>
    <string name="notify_on_end_date">Notify on End Date</string>
    <string name="delete_term">Delete Term</string>
    <string name="delete_assessment">Delete Assessment</string>
    <string name="delete_course">Delete Course</string>
    <string name="share_note">Share Note</string>
    <string name="courses_this_term">Courses This Term:</string>
    <string name="assessments">Assessments:</string>
    <string name="assessment_list">Assessment List</string>
    <string name="welcome_to_the_scheduling_app">Welcome to the Scheduling App!</string>
    <string name="enter">Enter</string>
    <string name="welcome_to_class_schedule_creator">Welcome to Class Schedule Creator!</string>
    <string name="search_assessments">Search assessments</string>
    <string name="search">Search</string>
    <string name="search_terms">Search Terms</string>
    <string name="search_assessments2">Search Assessments</string>
    <string name="search_by_course_title">Search By Course Title</string>
    <string name="search_by_assessment_title">Search By Assessment Title</string>
    <string name="search_by_term_title">Search By Term Title</string>
    <string name="dashboard">Dashboard</string>
    <string name="reports">Reports</string>
    <string name="term_reports">Term Reports</string>
    <string name="course_reports">Course Reports</string>
    <string name="assessment_reports">Assessment Reports</string>
    <string name="view_terms_by_date_range">View Terms By Date Range</string>
    <string name="submit">Submit</string>
    <string-array name="assessment_type">
        <item>Objective Assessment</item>
        <item>Performance Assessment</item>
    </string-array>
    <string-array name="course_status">
        <item>In Progress</item>
        <item>Completed</item>
        <item>Dropped</item>
        <item>Plan to Take</item>
    </string-array>
    <string-array name="course_status_reports">
        <item>All</item>
        <item>In Progress</item>
        <item>Completed</item>
        <item>Dropped</item>
        <item>Plan to Take</item>
    </string-array>
    <string-array name="assessment_type_reports">
        <item>All</item>
        <item>Objective Assessment</item>
        <item>Performance Assessment</item>
    </string-array>
</resources>